# myOS

./: .gitignore  Makefile  README.md  a.adoc  a.ans  async_uart_io.md  la-virt.dts.out  ls2k1000_dp.dts.out  plic.md  qinsert.sh  rust-toolchain.toml  rv-virt.dts.out  rv-virt1.dts.out  tty_buffer.md  view.sh
ben/: main.typ
doc/: Makefile  conf.typ  main.typ
docs/: .gitignore  README.md  abstract.typ  algorithm.typ  doc-all.typ  main.typ  template.typ  演示文稿1.pptx
easy-fs/: Cargo.toml
lwext4_rust/: create_img.sh  lwext4_rust_src.tar
os/: Cargo.toml  Makefile  build.rs  debug.gdb  gdbinit  ladebug.gdb  lagdb.gdb  makefile_temp_new  qrun.sh  rvgdb.gdb
os/.cargo/: config.toml
os/linker/: linker-2k1000-loongarch64.ld  linker-qemu-loongarch64.ld  linker-vf2-riscv64.ld
os/src/: config.rs  console.rs  entry.asm  entry_la.asm  lang_items.rs  linker-qemu-la.ld  linker-qemu.ld  linkerqemula.ld  logger.rs  main.rs  sbi.rs  timer.rs
os/src/arch/: mod.rs
os/src/arch/la64/: mod.rs  sbi.rs  sstatus.rs  uart.rs
os/src/arch/rv64/: mod.rs  sstatus.rs
os/src/boards/: k1000la.rs  ls2k1000_dp.dtb  mod.rs  qemu.rs
os/src/drivers/: device.rs  disk.rs  loongarch_cic.rs  loongarch_icu.rs  mod.rs
os/src/drivers/ahci/: mod.rs
os/src/drivers/ahci/ahci_driver/: drv_ahci.rs  libahci.rs  mod.rs  platform.rs
os/src/drivers/ahci_blk/: mod.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/drivers/device/: dev_number.rs  manager.rs  mod.rs
os/src/drivers/device_new/: dev_core.rs  dev_number.rs  irq.rs  manager.rs  mod.rs
os/src/drivers/device_old/: mod.rs  uart.rs
os/src/drivers/irqchip/: loongson_eiointc.rs  loongson_pch_pic.rs  mod.rs  riscv_plic.rs
os/src/drivers/irqchip/la64/: loongson_eiointc.rs  loongson_liointc.rs  loongson_pch_pic.rs  mod.rs
os/src/drivers/irqchip/rv64/: mod.rs  riscv_plic.rs
os/src/drivers/k1000la/: mod.rs  ns16550a.rs
os/src/drivers/loongarch/: ahci.rs  mod.rs  pci.rs
os/src/drivers/tty/: mod.rs  termios.rs  tty_core.rs
os/src/drivers/tty/serial/: mod.rs  ns16550a.rs
os/src/drivers/vf2/: mod.rs  sd.rs  utils.rs
os/src/drivers/vf2/dw/: mod.rs  register.rs  vf2_sdio.rs
os/src/drivers/virtio/: blk.rs  mod.rs
os/src/drivers/virtio_driver/: blk.rs  mod.rs  pci.rs  probe.rs
os/src/fs/: devfs.rs  dirent.rs  fanotify.rs  ffi.rs  file.rs  fsidx.rs  inode.rs  inode_cache.rs  ltp.rs  mod.rs  mount.rs  page_cache.rs  path.rs  pipe.rs  pre_data.rs  preload.S  preload_la.S  preload_rv.S  stat.rs  stdio.rs
os/src/fs/devfs/: char.rs  dev_loop.rs  mod.rs  null.rs  root.rs  rtc.rs  superblock.rs  tty.rs  urandom.rs  zero.rs
os/src/fs/ext4/: file.rs  inode.rs  mod.rs  super_block.rs
os/src/fs/procfs/: _self.rs  domainname.rs  inode.rs  interrupts.rs  irqtable.rs  meminfo.rs  mod.rs  mounts.rs  root.rs  super_block.rs
os/src/fs/procfs/_self/: dir.rs  exe.rs  maps.rs  mod.rs
os/src/fs/procfs/sys/: dir.rs  mod.rs
os/src/fs/procfs/sys/fs/: dir.rs  mod.rs  pipe_max_size.rs
os/src/fs/procfs/sys/kernel/: dir.rs  domainname.rs  mod.rs
os/src/fs/socketfs/: mod.rs  socketfile.rs  socketinode.rs
os/src/fs/tmp/: file.rs  inode.rs  mod.rs
os/src/fs/vfs/: dentry.rs  file.rs  inode.rs  mod.rs  super_block.rs
os/src/hal/: mod.rs  utils.rs
os/src/hal/arch/: mod.rs
os/src/hal/arch/la64/: mod.rs  timer.rs  trap.s  user_trap.rs
os/src/hal/arch/rv64/: context.rs  mod.rs  timer.rs  user_trap.rs
os/src/hal/la64/: context.rs  mod.rs  print.rs
os/src/hal/la64/arch/: interrupt.rs  iocsr.rs  mod.rs  sstatus.rs  uart.rs
os/src/hal/la64/config/: mod.rs
os/src/hal/la64/entry/: boot.rs  entry.asm
os/src/hal/la64/mem/: address.rs  mod.rs  page_table.rs  tlb.rs
os/src/hal/la64/trap/: context.rs  interrupt.rs  kernel_trap.rs  mod.rs  trap.S  unaligned.rs  user_trap.rs
os/src/hal/rv64/: mod.rs
os/src/hal/rv64/arch/: interrupt.rs  mod.rs  sbi.rs  sstatus.rs
os/src/hal/rv64/config/: mod.rs
os/src/hal/rv64/entry/: boot.rs  entry.asm  mod.rs
os/src/hal/rv64/mem/: address.rs  mod.rs  page_table.rs
os/src/hal/rv64/mm/: mod.rs
os/src/hal/rv64/trap/: context.rs  kernel_trap.rs  mod.rs  trap.S  user_trap.rs
os/src/ipc/: mod.rs  shm.rs
os/src/mm/: address.rs  ffi.rs  frame_allocator.rs  heap_allocator.rs  map_area.rs  memory_set.rs  mod.rs  page.rs  page_table.rs  user_ptr.rs  userbuffer.rs
os/src/mm/addr/: mod.rs  phys.rs
os/src/mm/memory_space/: mod.rs  vm_area.rs
os/src/mm/page/: mod.rs
os/src/mm/user_ptr/: mod.rs
os/src/net/: addr.rs  dev.rs  ffi.rs  manager.rs  mod.rs  net_async.rs  port.rs  socket.rs  tcp.rs  udp.rs  unix.rs
os/src/signal/: do_signal.rs  ffi.rs  mod.rs  sig_pending.rs  sig_stack.rs  sig_struct.rs  sigpending.rs
os/src/sync/: interrupt.rs  misc.rs  mod.rs  time_async.rs  timer.rs  up.rs
os/src/sync/mutex/: ffi.rs  mod.rs  sleep.rs  spin.rs
os/src/sync/once/: mod.rs
os/src/sync/time/: itimerval.rs  mod.rs  timedata.rs  timesepc.rs  timestamp.rs  timeval.rs  tms.rs
os/src/syscall/: ffi.rs  fs.rs  io.rs  io_async.rs  mm.rs  mod.rs  net.rs  process.rs  sync.rs  sys_num.rs
os/src/task/: aux.rs  context.rs  executor.rs  fd.rs  futex.rs  ipc.rs  manager.rs  mod.rs  pid.rs  processor.rs  sched.rs  switch.S  switch.rs  task.rs  thread_group.rs
os/src/test/: mod.rs  utils.rs
os/src/test/ucheck_test/: mod.rs  stack_test.rs
os/src/trap/: context.rs  kernel_trap.rs  la64_trap.S  mod.rs  rv64_trap.S  trap.S  user_trap.rs
os/src/utils/: ascii.rs  boot.rs  cache.rs  downcast.rs  elf.rs  errtype.rs  flags.rs  logger.rs  mod.rs  random.rs  raw_ptr.rs  user_backtrace.rs
os/src/utils/container/: light_bitset.rs  lru.rs  mod.rs  range_map.rs  ring_buffer.rs
report/: 20250422_merge_report.md  20250506_merge_report.md  20250520_merge_la_mmu.md  20250522_update.md  20250524_libctest_la_pthread.md  20250527_ltp_ftruncate64.md  20250531_fs.md  20250611_fs_dentry重大更新.md  20250722_io_refactor_report.md  LTP测例.md  ascii.md  eval分支说明  (+22 more)
simple-fat32/: Cargo.toml  create_img.sh
simple-fat32/src/: console.rs
user/: Cargo.toml  Makefile
user/.cargo/: config.toml
user/src/: ffi.rs  lib.rs  syscall.rs
(+51 files in other folders)
