[package]
name = "os"
version = "0.1.0"
authors = ["Yao Junjie <345024941@qq.com>"]
edition = "2021"

[dependencies]
lazy_static = { path = "../vendor/lazy_static", version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = { path = "../vendor/buddy_system_allocator", version = "0.11.0"}
bitflags = { path = "../vendor/bitflags", version = "2.8.0"}
xmas-elf = { path = "../vendor/xmas-elf",  version = "0.10.0"}
virtio-drivers = { path = "../vendor/virtio-drivers"}
flat_device_tree = { path = "../vendor/flat_device_tree", version = "3.1.1" }
log = { path = "../vendor/log", version = "0.4"}
spin = { path = "../vendor/spin", version = "0.9.8" }
sbi-spec = { path = "../vendor/sbi-spec",  version = "0.0.7"}
num_enum = { path = "../vendor/num_enum", version = "0.7.2", default-features = false }
zerocopy = { path = "../vendor/zerocopy", version = "0.8.21", features = ["derive"]}
lwext4_rust= {path = "../lwext4_rust"}
hashbrown = { path = "../vendor/hashbrown", version = "0.15.2" }
async-task = { path = "../vendor/async-task", version = "4.7.1", default-features = false }
async-trait = { path = "../vendor/async-trait", version = "0.1.88"}
crossbeam-queue = { path = "../vendor/crossbeam-queue", version = "0.3", default-features = false, features = ["alloc"] }
smoltcp = { path = "../vendor/smoltcp-0.12.0", version = "0.12.0", default-features = false, features = [
    "alloc",
    "log",
    "medium-ethernet",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "proto-dhcpv4",
    "proto-ipv4-fragmentation",
    "socket-udp",
    "socket-tcp",
    "socket-dhcpv4",
    "async",
    "log",
] }
bitvec-rs = { path = "../vendor/bitvec-rs", version="0.2.1", default-features = false }
cfg-if = { path = "../vendor/cfg-if", version = "1.0.0", default-features = false }
downcast-rs = { path = "../vendor/downcast-rs", version = "2.0.1", default-features = false, features = ["sync"]}
paste = { path = "../vendor/paste", version = "1"}

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { path = "../vendor/riscv", features = ["inline-asm"] }
sbi-rt = { path = "../vendor/sbi-rt", version = "0.0.3", features = ["legacy"] }

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongarch64 = { path = "../vendor/loongArch64", package = "loongArch64" }

[features]
board_qemu = []
default = ["info", "test", "qemu_riscv", "mbshell"]
error = []
timewhell = []
warn = []
autorun = []
gbshell = []
mbshell = []
initproc = []
info = []
debug = []
trace = []
mul_hart = []
test = []
qemu_riscv = []
test_initproc = []

[profile.release]
debug = true

# 关键：覆盖指定包
[patch.crates-io]
cty = { path = "../cty" }