[package]
name = "simple-fat32"
version = "0.1.0"
authors = ["Yao Junjie <345024941@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The newest versions are described below, but they are not compatible with UltraOS's newest version.
[dependencies]
spin = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

