[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = { path = "../vendor/buddy_system_allocator", version = "0.11.0"}
bitflags = { path = "../vendor/bitflags", version = "2.8.0"}

[profile.release]
debug = true

# [features]
# board_qemu = []
# board_k210 = []